updated about and forecast page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,8 @@
   <body>
     <div class="main-content">
     {{>header}}
+    <p>This site is created by MD. Shamsul Raihan. This site uses data from Mapbox and Weatherstack API.</p>
+    <p>Thank You.</p>
     <img class="potrait" src="/images/IMG-20210910-WA0012.jpg" alt="profile" />
     </div>
 
